--- a/index.html
+++ b/index.html
@@ -1,15 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Four card feature section</title>
 
 </head>
+
 <body>
-    
+
+  <h1>Reliable, efficient delivery</h1>
+  <h1 class="light">Powered by Technology</h1>
+  <p>Our artificial intelligence powered tools use millions of project data points to ensure that you project is
+    successful</p>
+
+  <div class="tools">
+    <div class="box">
+      <h2>Supervisor</h2>
+      <p>Mentors activity to identify project roadblocks</p>
+      <img src="/images/icon-supervisor.svg" alt="Supervisor">
+    </div>
+    <div>
+      <div class="box">
+        <h2>Team Builder</h2>
+        <p>Scans our talent network to create the optimal team for you project</p>
+        <img src="/images/icon-team-builder.svg" alt="Team Builder">
+      </div>
+      <div class="box">
+        <h2>Karma</h2>
+        <p>Regularly evaluates our talent to ensure quality</p>
+        <img src="/images/icon-karma.svg" alt="Karma">
+      </div>
+    </div>
+    <div class="box">
+      <h2>Calculator</h2>
+      <p>Uses data from post projects to provide better delivery estimates</p>
+      <img src="/images/icon-calculator.svg" alt="Calculator">
+    </div>
+  </div>
+
 </body>
+
 </html>
