--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="style.css">
+
+  <!-- Google Fonts | Poppins -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
   <title>Four card feature section</title>
 
@@ -14,30 +20,32 @@
 
 <body>
 
-  <h1>Reliable, efficient delivery</h1>
-  <h1 class="light">Powered by Technology</h1>
-  <p>Our artificial intelligence powered tools use millions of project data points to ensure that you project is
-    successful</p>
+  <div id="top">
+    <h1>Reliable, efficient delivery</h1>
+    <h1 class="light">Powered by Technology</h1>
+    <p>Our artificial intelligence powered tools use millions of project data points to ensure that you project is
+      successful</p>
+  </div>
 
   <div class="tools">
-    <div class="box">
+    <div class="box" id="supervisor">
       <h2>Supervisor</h2>
       <p>Mentors activity to identify project roadblocks</p>
       <img src="/images/icon-supervisor.svg" alt="Supervisor">
     </div>
     <div>
-      <div class="box">
+      <div class="box" id="team">
         <h2>Team Builder</h2>
         <p>Scans our talent network to create the optimal team for you project</p>
         <img src="/images/icon-team-builder.svg" alt="Team Builder">
       </div>
-      <div class="box">
+      <div class="box" id="karma">
         <h2>Karma</h2>
         <p>Regularly evaluates our talent to ensure quality</p>
         <img src="/images/icon-karma.svg" alt="Karma">
       </div>
     </div>
-    <div class="box">
+    <div class="box" id="calculator">
       <h2>Calculator</h2>
       <p>Uses data from post projects to provide better delivery estimates</p>
       <img src="/images/icon-calculator.svg" alt="Calculator">
