Aligned the image to right and added shadow to the boxs

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 <body>
 
   <div id="top">
-    <h1>Reliable, efficient delivery</h1>
-    <h1 class="light">Powered by Technology</h1>
+    <h1 class="light">Reliable, efficient delivery</h1>
+    <h1 class="second-heading">Powered by Technology</h1>
     <p>Our artificial intelligence powered tools use millions of project data points to ensure that you project is
       successful</p>
   </div>
